@@ -840,13 +840,13 @@ SKIP: foreach my $db_type ('pg')
   $o->other2_objs_on_save(\@o2s);
 
   $o->save;
-  
+
   my $to = MyPgObject->new(id => $o->id)->load;
   @o2s = $o->other2_objs_on_save;
-  
+
   is_deeply([ 'seven', 'one', 'added' ], [ map { $_->name } @o2s ], "add one to many on save 1 - $db_type");
-  
-  
+
+
   #
   # "one to many" add_now
   #
@@ -4243,16 +4243,16 @@ SKIP: foreach my $db_type ('sqlite')
   # Begin experiment
   #local $Rose::DB::Object::Manager::Debug = 1;
   my $no2s = $o->not_other2_objs;
-  
+
   is(scalar @$no2s, 2, 'not equal one-to-many 1');
-  
+
   my $nobjs = 
     Rose::DB::Object::Manager->get_objects(
       object_class => 'MySQLiteObject',
       require_objects => [ 'not_other2_objs' ]);
-  
+
   is(scalar @$nobjs, 2, 'not equal one-to-many 2');
-  
+
   MySQLiteObject->meta->delete_relationship('not_other2_objs');
   # End experiment
 
@@ -4917,12 +4917,12 @@ SKIP: foreach my $db_type ('sqlite')
   $o->other2_objs_on_save(\@o2s);
 
   $o->save;
-  
+
   my $to = MySQLiteObject->new(id => $o->id)->load;
   @o2s = $o->other2_objs_on_save;
-  
+
   is_deeply([ 'seven', 'one', 'added' ], [ map { $_->name } @o2s ], "add one to many on save 1 - $db_type");
-  
+
   #
   # "one to many" add_now
   #
@@ -5516,7 +5516,7 @@ SKIP: foreach my $db_type ('sqlite')
   is($count, 5, "add 2 many to many on save 34 - $db_type");
 
   # End "many to many" tests
-  
+
   # Begin with_map_records tests
 
   @colors = $o->colors2;  
@@ -5557,7 +5557,7 @@ SKIP: foreach my $db_type ('sqlite')
   is($objs->[1]->colors3->[0]->map_rec->color_id, 9, "with_map_records map_rec 3 - $db_type");
   is($objs->[1]->colors3->[-1]->map_rec->color_id, 1, "with_map_records map_rec 4 - $db_type");
   is($objs->[0]->name, 'Zoom', "with_map_records map_rec 5 - $db_type");
-  
+
   $objs = 
     Rose::DB::Object::Manager->get_objects(
       object_class => 'MySQLiteObject',
@@ -5634,11 +5634,11 @@ SKIP: foreach my $db_type ('sqlite')
   is($obj->colors2->[0]->map_record->obj_id, $o->id, "with_map_records map_record 2 - $db_type");
 
   # End with_map_records tests
-  
+
   # Start create with map records tests
 
   $o = MySQLiteObject->new(name => 'WMR');
-  
+
   $o->colors3({ name => 'Gray', map_rec => { id => 999, arb_attr => 'Whee' } });
 
   $o->save;
@@ -5750,7 +5750,7 @@ CREATE TABLE rose_db_object_colors_map
   id        SERIAL PRIMARY KEY,
   obj_id    INT NOT NULL REFERENCES rose_db_object_test (id),
   color_id  INT NOT NULL REFERENCES rose_db_object_colors (id),
-  
+
   arb_attr  VARCHAR(64),
 
   UNIQUE(obj_id, color_id)
@@ -6892,7 +6892,7 @@ EOF
           add_on_save     => undef,
         },
       },
-      
+
       # Hrm.  Experimental...
       not_other2_objs =>
       {
